--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,19 @@
 }
 @layer components {
   .btn-primary {
-    @apply transition-all duration-200 py-2 px-4 text-white font-semibold rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+    @apply transition-all duration-200 py-2 px-4 text-white font-semibold rounded-lg shadow-md focus:outline-none focus:ring-2 focus:ring-opacity-75;
+  }
+  .primary {
+    @apply bg-blue-500 hover:bg-blue-600 focus:ring-blue-400;
+  }
+  .secondary {
+    @apply bg-gray-500 hover:bg-gray-600 focus:ring-gray-400;
+  }
+  .danger {
+    @apply bg-red-500 hover:bg-red-600 focus:ring-red-400;
+  }
+  .input-form {
+    @apply border border-gray-300 rounded-lg p-2 m-2;
   }
   .main-page {
     @apply flex bg-slate-100 flex-row min-h-screen px-0;
